login creado, faltan validaciones

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logoSF.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Repositorio Reportes Andes</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
